<resources>
    <string name="string_null">Err.</string>
    <string name="app_name">Eventverse</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="event_gallery_title">Prochainement</string>
    <string name="event_gallery_view_more">Voir plus</string>
    <string name="signin_title">Bienvenue !</string>
    <string name="signin_instructions">Une dernière petite étape avant de commencer notre aventure ensemble. Êtes-vous :</string>
    <string name="signin_participant_radio_text">Un(e) participan(e)</string>
    <string name="signin_organizer_radio_text">Un(e) organisateur(trice)</string>
    <string name="signin_organize_code_hint">Demande à un admin</string>
    <string name="signin_organizer_code_label">Code organisateur :</string>
    <string name="signin_submit_button">C\'est parti !</string>
    <string name="firstName">John</string>
    <string name="lastName">Doe</string>
    <string name="mesEvenements">Mes Evenements</string>
    <string name="choose_picture_button_label">Choisir une image</string>
    <string name="eventName">Nom de l\'événement</string>
    <string name="eventNameInput">Nom de l\'évenement</string>
    <string name="startDate">Date de début</string>
    <string name="startTime">Heure de début</string>
    <string name="endDate">Date de fin</string>
    <string name="endTime">Heure de fin</string>
    <string name="eventLocation">Lieu de l\'événement</string>
    <string name="eventTarget">Public</string>
    <string name="eventDescription">Description de l\'événement</string>
    <string name="eventDescriptionInput">Description de l\'événement</string>
    <string name="createButton">+ Créer</string>
    <string name="eventCreationTitle">Creation d\'un evenement</string>
    <string name="profile_menu_label">Profil</string>
    <string name="home_menu_label">Accueil</string>
    <string name="events_menu_label">Événements</string>
    <string name="soon_tab_menu_label">Prochainement</string>
    <string name="near_tab_menu_label">Proche de moi</string>
    <string name="for_me_tab_menu_label">Pour moi</string>
    <string name="liked_tab_menu_label">Que j\'aime</string>
    <string name="created_tab_menu_label">Que j\'ai créé</string>
    <string name="logo_eventverse_alt">Logo Eventverse</string>
    <string name="event_cover_alt">Photo de couverture de l\'évènement</string>
    <string name="event_like_button_alt">Participer à l\'évènement</string>
    <string name="event_infos_button_alt">Plus d\'infos sur l\'évènement</string>
    <string name="event_location_icon_alt">Lieux de l\'évènement</string>
    <string name="event_dates_icon_alt">Dates de l\'évènement</string>
    <string name="event_details_title">Détails de l\'événement</string>
    <string name="profile_parameters_title">Paramètres du profil</string>
    <string name="profile_parameters_icon_alt">Paramètres du profil</string>
    <string name="profile_create_event_button">Créer un nouvel évènement</string>
    <string name="navigation_tab_liked">Mes événements aimés</string>
    <string name="navigation_tab_created">Mes événements créés</string>
    <string name="event_item_edit_button_desc">Modifier l\'évènement</string>
    <string name="event_item_delete_button_desc">Supprimer un évènement</string>
    <string name="parameters_commit_button_label">Enregistrer</string>
    <string name="parameters_commit_error_msg">Une erreur est survenue lors de l\'enregistrement des préférences.</string>
    <string name="parameters_commit_success_msg">Préférences mises à jour.</string>
    <string name="parameters_target_label">Public</string>
    <string name="parameters_address_label">Adresse par défaut</string>
    <string name="distance_to_event_label">Distance des événements</string>
    <string name="time_before_event_label">Temps avant le début des événements</string>
    <string name="profile_parameters_name_hint">Prénom</string>
    <string name="profile_parameters_surname_hint">Nom</string>
    <string name="modify_event_title">Modification de l\'événement</string>
    <string name="create_event_title">Création de l\'événement</string>
    <string name="create_event_button_label">Créer</string>
    <string name="modify_event_button_label">Modifier</string>
    <string name="gallery_empty">Aucun événement</string>
    <string name="error_get_event">Une erreur est survenue lors de la récupération des détails de l\'événement %1$s.</string>
    <string name="error_get_events_category">Une erreur est survenue lors de la récupération des événements de la catégorie "%1$s".</string>
    <string name="error_get_user">Une erreur est survenue lors de la récupération des détails de l\'utilisateur.</string>
    <string name="nom_du_lieu">Nom du lieu</string>
    <string name="longitude">Longitude</string>
    <string name="latitude">Latitude</string>
    <string name="EventEditButton">Mettre à jour</string>
    <string name="longitudeExample">Ex: -8.66</string>
    <string name="latitudeExample">Ex: 26.4589</string>
    <string name="delete_alert_dialog_title">Suppression</string>
    <string name="delete_alert_dialog_positive_button">Supprimer</string>
    <string name="delete_alert_dialog_negative_button">Annuler</string>
    <string name="delete_alert_dialog_message">Voulez-vous vraiment supprimer l\'événement %1$s dont le titre est "%2$s"</string>
    <string name="delete_alert_dialog_error">Erreur lors de la suppression de l\'événement %1$s</string>
    <string name="take_picture_button_label">Prendre une photo</string>
</resources>